# gishant-scripts

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  ayon_products.py  benchmark_mesh_optimization.py  change_default_kernel.sh  createAndCheckIntermediateShapes.py  create_unknown_nodes_and_plugins_maya.py  ffmpeg_snippets.md  fix_namespace.py  mayaLog  pyproject.toml  queryMayaAttributes.py  rez_build.sh  search_executable.py  work_summary_adma.md  work_summary_gisi.md
docs/: DATABASE_RESTORE.md  ffmpeg_snippets.md
scripts/: copy-database-backups.sh  reset-and-populate.sh  showcase.py  sync-and-restore-databases.sh  testing_ayon_connection.py
scripts/maya/: benchmark_mesh_optimization.py  query_maya_attributes.py
scripts/unreal/: reload_libs.py
src/gishant_scripts/: __init__.py  cli.py  restore_databases_cli.py
src/gishant_scripts/_core/: README_GEMINI.md  __init__.py  bulk_data_manager.py  config.py  decorators.py  docker_utils.py  errors.py  gemini.py  logging.py
src/gishant_scripts/ayon/: README.md  __init__.py  __main__.py  analyze_bundles.py  batch_data_generator.py  bundles.py  cli.py  common.py  connection.py  diff.py  get_representation.py  publish_test_asset.py  representations.py  restore_db_cli.py  sync_bundles.py  ui.py
src/gishant_scripts/ayon/ayon-server/: .env  docker-compose.yml  restore-db.sh
src/gishant_scripts/ayon/cli/: __init__.py  get_representation_cli.py
src/gishant_scripts/bookstack/: __init__.py  cli.py  client.py  docker-compose.yml
src/gishant_scripts/bookstack/resources/: __init__.py  attachments.py  audit_log.py  base.py  books.py  chapters.py  comments.py  content_permissions.py  image_gallery.py  pages.py  recycle_bin.py  roles.py  search.py  shelves.py  system.py  users.py
src/gishant_scripts/common/: README_GEMINI.md  __init__.py  bulk_data_manager.py  config.py  db_restore.py  decorators.py  docker_utils.py  gemini.py  logging.py  unified_restore.py
src/gishant_scripts/diagnostic/: __init__.py  ayon_env.py  cli.py  config.py  launcher_runner.py  maya_runner.py  models.py  result_writer.py  result_writer_standalone.py  unreal_runner.py
src/gishant_scripts/github/: __init__.py  cli.py  fetch_prs.py
src/gishant_scripts/kitsu/: batch_data_generator.py  cli.py  convert-backup-to-sql.sh  restore_db_cli.py
src/gishant_scripts/kitsu/kitsu-server/: README.md  docker-compose.yml  init-zou.sh  restore-db.sh
src/gishant_scripts/kitsu/kitsu-server/kitsu/: Dockerfile
src/gishant_scripts/kitsu/kitsu-server/nginx/: nginx.conf
src/gishant_scripts/kitsu/kitsu-server/zou/: Dockerfile
src/gishant_scripts/maya/: __init__.py  createAndCheckIntermediateShapes.py  create_unknown_nodes_and_plugins_maya.py  fix_namespace.py
src/gishant_scripts/media/: EXAMPLES.md  README.md  __init__.py  cli.py  converter.py  ffmpeg_convert.py  presets.py
src/gishant_scripts/nuke/: diagnose_render_output.py
src/gishant_scripts/postal/: INSTALLATION.md  POSTAL_INSTALL_PRODUCTION.md  POSTAL_INSTALL_TESTING.md  POSTAL_LIMITATIONS_REPORT.md  POSTFIX_INSTALL_PRODUCTION.md  POSTFIX_INSTALL_TESTING.md  PRODUCTION.md  PRODUCTION_WORKFLOW.md  README.md  SCRIPT_USAGE.md  SEND_TEST_EMAIL.md  TESTING_WORKFLOW.md  cleanup_haribusservice.py  configure_postal.py  configure_redefine_route.py  install_postal.py  install_postfix.py  send_test_email.py  send_test_email_simple.py
src/gishant_scripts/rez/: build_rez_packages.py
src/gishant_scripts/task_workspace/: __init__.py  cli.py  config.py  config_default.yaml  git_ops.py  migrate.py  migrator.py  repo_discovery.py  ui.py  workspace_builder.py  zed_builder.py
src/gishant_scripts/task_workspace/templates/: workspace_settings.yaml
src/gishant_scripts/unreal/: __init__.py  autoassign_sm.py  maya_fbx_triangulate.py  unreal_benchmark_fbxsm_import.py
src/gishant_scripts/utils/: ayon_products.py  check_bundles.py  generate_report.py  generate_work_summary.py  kitsu_integration_demo.py
src/gishant_scripts/youtrack/: __init__.py  cli.py  create_issue.py  creator.py  fetch_issues.py  fetcher.py  generate_copilot_prompt.py  generate_work_summary.py  update_epic_progress.py  update_issue.py  updater.py
tests/: __init__.py  conftest.py  test_basic.py  test_ffmpeg_convert.py
tests/_core/: test_config.py  test_decorators.py  test_errors.py  test_logging.py
tests/ayon/: __init__.py  conftest.py  test_analyze_bundles.py  test_sync_bundles.py
tests/bookstack/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_resources.py
tests/common/: test_config.py  test_decorators.py  test_errors.py  test_logging.py
tests/postal/: __init__.py  test_send_api.py  test_send_smtp.py
tests/test_diagnostic/: test_runners.py
tests/test_diagnostic/fixtures/: hello_world_maya.py  hello_world_unreal.py
tests/unit/: test_cli_smoke.py
tests/unit/ayon/: test_diff.py
tests/unit/diagnostic/: test_config.py
tests/unit/youtrack/: test_creator.py
unreal/: autoassign_sm.py  unreal_benchmark_fbxsm_import.py
unreal_benchmark/: maya_fbx_triangulate.py  unreal_benchmark_fbxsm_import.py
