[project]
name = "gishant-scripts"
version = "0.1.0"
description = "Collection of custom scripts for AYON pipeline, YouTrack integration, GitHub automation, and Maya/Unreal utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gishant Singh", email = "gisi@redefine.co" }
]
dependencies = [
    "requests>=2.31.0",
    "google-genai>=0.8.1",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ayon-python-api>=1.0.9,<2",
    "gazu>=0.10.13,<1",
    "pyyaml>=6.0.3",
    "rdo-ayon-utils>=0.5.0,<1",
    "rdo-kitsu-utils>=0.3.0,<1",
    "rdo-pms-bridge>=0.2.0,<1",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
# Main CLI entry point
gishant = "gishant_scripts.cli:main"

# Media conversion CLI
ffmpeg-convert = "gishant_scripts.media.ffmpeg_convert:cli"

# Bulk data management CLI for AYON and Kitsu
bulk-data = "gishant_scripts.common.bulk_data_manager:app"

# Database restore CLIs
restore-ayon-db = "gishant_scripts.ayon.restore_db_cli:app"
restore-kitsu-db = "gishant_scripts.kitsu.restore_db_cli:app"
restore-databases = "gishant_scripts.restore_databases_cli:app"

# Postal Server installation CLI
postal-install = "gishant_scripts.postal.install:app"
# Postal Server email testing CLIs
postal-smtp = "gishant_scripts.postal.send_smtp:app"
postal-api = "gishant_scripts.postal.send_api:app"

# BookStack API CLI
bookstack = "gishant_scripts.bookstack.cli:main"

# Legacy individual script entry points (for backward compatibility)
fetch-youtrack = "gishant_scripts.youtrack.fetch_issues:main"
create-youtrack-issue = "gishant_scripts.youtrack.create_issue:main"
update-epic-progress = "gishant_scripts.youtrack.update_epic_progress:main"
fetch-github-prs = "gishant_scripts.github.fetch_prs:main"
generate-copilot-prompt = "gishant_scripts.youtrack.generate_copilot_prompt:main"
generate-report = "gishant_scripts.utils.generate_report:main"
generate-work-summary = "gishant_scripts.youtrack.generate_work_summary:main"

# AYON-Kitsu test publisher (Bollywoof/test episode only)
publish-test-asset = "gishant_scripts.ayon.publish_test_asset:main"

[tool.uv]
override-dependencies = [
    "rdo-ayon-utils",
    "rdo-kitsu-utils",
    "rdo-pms-bridge",
    "rdo-logging",
]

[tool.uv.sources]
rdo-ayon-utils = { path = "/home/gisi/dev/worktrees/pipe-671_kitsu-version-linking/rdo-core-ayon-utils", editable = false }
rdo-kitsu-utils = { path = "/home/gisi/dev/worktrees/pipe-693_edl-ingester_refactor/rdo-core-kitsu-utils", editable = false }
rdo-pms-bridge = { path = "/home/gisi/dev/worktrees/pipe-671_kitsu-version-linking/rdo-core-pms-bridge", editable = false }
rdo-logging = { path = "/home/gisi/dev/worktrees/structlog-redesign/rdo-core-logging", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
