[project]
name = "gishant-scripts"
version = "0.1.0"
description = "Collection of custom scripts for AYON pipeline, YouTrack integration, GitHub automation, and Maya/Unreal utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gishant Singh", email = "gisi@redefine.co" }
]
dependencies = [
    "requests>=2.31.0",
    "google-genai>=0.8.1",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ayon-python-api>=1.0.9,<2",
    "gazu>=1.1.5,<2",
    "pyyaml>=6.0.3",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
# RDO packages are installed separately via [tool.uv.sources] during local development.
# They are not declared as optional deps because their transitive dependency constraints
# conflict with this project's direct deps (e.g. gazu version mismatch).
# The CLI gracefully degrades via try/except ImportError when they are absent.

[project.scripts]
# Main CLI entry point
gishant = "gishant_scripts.cli:main"

# Media conversion CLI
ffmpeg-convert = "gishant_scripts.media.ffmpeg_convert:cli"

# Bulk data management CLI for AYON and Kitsu
bulk-data = "gishant_scripts._core.bulk_data_manager:app"

# BookStack API CLI
bookstack = "gishant_scripts.bookstack.cli:main"

# Task workspace generator
task-workspace = "gishant_scripts.task_workspace.cli:typer_main"

# AYON-Kitsu test publisher (Bollywoof/test episode only)
publish-test-asset = "gishant_scripts.ayon.publish_test_asset:main"

# DCC diagnostic runner (Maya / Unreal)
dcc-run = "gishant_scripts.diagnostic.cli:main"

# [tool.uv.sources]
# Uncomment and adjust paths below to develop with local RDO worktrees.
# These packages are NOT declared as dependencies — they are installed separately
# and the CLI gracefully degrades when absent (try/except ImportError guards).
#
# [tool.uv]
# override-dependencies = ["rdo-ayon-utils", "rdo-kitsu-utils", "rdo-pms-bridge", "rdo-logging"]
#
# [tool.uv.sources]
# rdo-ayon-utils = { path = "/home/gisi/dev/worktrees/pipe-671_kitsu-version-linking/rdo-core-ayon-utils", editable = false }
# rdo-kitsu-utils = { path = "/home/gisi/dev/worktrees/pipe-693_edl-ingester_refactor/rdo-core-kitsu-utils", editable = false }
# rdo-pms-bridge = { path = "/home/gisi/dev/worktrees/pipe-671_kitsu-version-linking/rdo-core-pms-bridge", editable = false }
# rdo-logging = { path = "/home/gisi/dev/worktrees/structlog-redesign/rdo-core-logging", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gishant_scripts"]

[tool.hatch.build.targets.wheel.force-include]
"src/gishant_scripts/task_workspace/config_default.yaml" = "gishant_scripts/task_workspace/config_default.yaml"
"src/gishant_scripts/task_workspace/templates" = "gishant_scripts/task_workspace/templates"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    "COM812",  # Conflicts with formatter (trailing comma)
    "D203",    # Conflicts with D211 (no blank line before class docstring)
    "D213",    # Conflicts with D212 (multi-line summary first line)
    "EM101",   # Allow string literals in exception constructors
    "EM102",   # Allow f-strings in exception constructors
    "ISC001",  # Conflicts with formatter (implicit string concat)
    "FBT",     # Allow boolean positional args (common in CLI code)
    "TRY003",  # Allow long messages in raise statements
    "S603",    # Allow subprocess calls without shell=True validation (CLI tool)
    "S607",    # Allow partial executable paths in subprocess
    "ANN",     # Type annotations — add incrementally, not all at once
    "D1",      # Missing docstrings — add incrementally
    "T201",    # print() used in CLI output (intentional)
    "PLC0415", # Lazy imports at function level (intentional for optional deps)
    "PLR0913", # Too many function arguments (common in CLI callbacks)
    "BLE001",  # Blind exception catching — fix incrementally with comments
    "TRY300",  # try-except-return pattern (acceptable in runners)
    "TRY301",  # raise within try (acceptable pattern)
    "C901",    # Function complexity — address when splitting large files
    "PLR0912", # Too many branches — address when splitting large files
    "PLR0915", # Too many statements — address when splitting large files
    "PLR2004", # Magic value comparisons (acceptable in CLI/config code)
    "E501",    # Line too long — handled by ruff format
    "B008",    # Function call in default arg (typer.Option pattern)
    "B904",    # raise X from Y — fix incrementally
    "S105",    # Hardcoded password detection (false positives on env var names)
    "S106",    # Hardcoded password detection (false positives on env var names)
    "TC003",   # typing-only import — minor optimization, add later
    "ERA001",  # Commented-out code — intentional in some cases
    "PLW1510", # subprocess.run without check — intentional for CLI runners
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "ANN", "PLR2004", "SLF001"]
"scripts/**/*.py" = ["D", "ANN", "T201", "INP001"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect trailing commas
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not integration'"
markers = [
    "integration: requires actual DCC installation, SSH connectivity, or AYON server",
]
